# not-twitter

./: LICENSE
backend/: pyproject.toml  pytest.ini
backend/accounts/: admin.py  permissions.py  signals.py  urls.py
backend/accounts/migrations/: 0001_initial.py  0002_profile_display_name.py
backend/accounts/models/: follow.py  profile.py
backend/accounts/serializers/: auth_serializer.py  follow_serializer.py  profile_serializer.py
backend/accounts/tests/: conftest.py  test_follow.py  test_models.py  test_views.py
backend/accounts/viewsets/: auth_viewset.py  follow_viewset.py  profile_viewset.py
backend/app/: settings.py  urls.py
backend/posts/: admin.py  permissions.py  urls.py
backend/posts/migrations/: 0001_initial.py
backend/posts/models/: comment.py  like.py  post.py
backend/posts/serializers/: comment_serializer.py  like_serializer.py  post_serializer.py
backend/posts/tests/: conftest.py  test_feed.py  test_models.py  test_views.py
backend/posts/viewsets/: comment_viewset.py  feed_viewset.py  like_viewset.py  post_viewset.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
